src/modelica_builder/modelica_parser/cpp_src/modelicaParser.cpp

// Generated from /var/antlrResult/modelica.g4 by ANTLR 4.8


#include "modelicaVisitor.h"

#include "modelicaParser.h"


using namespace antlrcpp;
using namespace antlr4;

modelicaParser::modelicaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

modelicaParser::~modelicaParser() {
  delete _interpreter;
}

std::string modelicaParser::getGrammarFileName() const {
  return "modelica.g4";
}

const std::vector<std::string>& modelicaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& modelicaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Stored_definitionContext ------------------------------------------------------------------

modelicaParser::Stored_definitionContext::Stored_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<modelicaParser::Within_statementContext *> modelicaParser::Stored_definitionContext::within_statement() {
  return getRuleContexts<modelicaParser::Within_statementContext>();
}

modelicaParser::Within_statementContext* modelicaParser::Stored_definitionContext::within_statement(size_t i) {
  return getRuleContext<modelicaParser::Within_statementContext>(i);
}

std::vector<modelicaParser::Class_definitionContext *> modelicaParser::Stored_definitionContext::class_definition() {
  return getRuleContexts<modelicaParser::Class_definitionContext>();
}

modelicaParser::Class_definitionContext* modelicaParser::Stored_definitionContext::class_definition(size_t i) {
  return getRuleContext<modelicaParser::Class_definitionContext>(i);
}


size_t modelicaParser::Stored_definitionContext::getRuleIndex() const {
  return modelicaParser::RuleStored_definition;
}


antlrcpp::Any modelicaParser::Stored_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitStored_definition(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Stored_definitionContext* modelicaParser::stored_definition() {
  Stored_definitionContext *_localctx = _tracker.createInstance<Stored_definitionContext>(_ctx, getState());
  enterRule(_localctx, 0, modelicaParser::RuleStored_definition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(163);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == modelicaParser::T__2) {
      setState(160);
      within_statement();
      setState(165);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(174);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::T__0)
      | (1ULL << modelicaParser::T__3)
      | (1ULL << modelicaParser::T__4)
      | (1ULL << modelicaParser::T__5)
      | (1ULL << modelicaParser::T__6)
      | (1ULL << modelicaParser::T__7)
      | (1ULL << modelicaParser::T__8)
      | (1ULL << modelicaParser::T__9)
      | (1ULL << modelicaParser::T__10)
      | (1ULL << modelicaParser::T__11)
      | (1ULL << modelicaParser::T__12)
      | (1ULL << modelicaParser::T__13)
      | (1ULL << modelicaParser::T__14)
      | (1ULL << modelicaParser::T__15)
      | (1ULL << modelicaParser::T__16))) != 0)) {
      setState(167);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__0) {
        setState(166);
        match(modelicaParser::T__0);
      }
      setState(169);
      class_definition();
      setState(170);
      match(modelicaParser::T__1);
      setState(176);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Within_statementContext ------------------------------------------------------------------

modelicaParser::Within_statementContext::Within_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::NameContext* modelicaParser::Within_statementContext::name() {
  return getRuleContext<modelicaParser::NameContext>(0);
}


size_t modelicaParser::Within_statementContext::getRuleIndex() const {
  return modelicaParser::RuleWithin_statement;
}


antlrcpp::Any modelicaParser::Within_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitWithin_statement(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Within_statementContext* modelicaParser::within_statement() {
  Within_statementContext *_localctx = _tracker.createInstance<Within_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, modelicaParser::RuleWithin_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    match(modelicaParser::T__2);
    setState(179);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::T__86

    || _la == modelicaParser::IDENT) {
      setState(178);
      name();
    }
    setState(181);
    match(modelicaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_definitionContext ------------------------------------------------------------------

modelicaParser::Class_definitionContext::Class_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Class_prefixesContext* modelicaParser::Class_definitionContext::class_prefixes() {
  return getRuleContext<modelicaParser::Class_prefixesContext>(0);
}

modelicaParser::Class_specifierContext* modelicaParser::Class_definitionContext::class_specifier() {
  return getRuleContext<modelicaParser::Class_specifierContext>(0);
}


size_t modelicaParser::Class_definitionContext::getRuleIndex() const {
  return modelicaParser::RuleClass_definition;
}


antlrcpp::Any modelicaParser::Class_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_definition(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_definitionContext* modelicaParser::class_definition() {
  Class_definitionContext *_localctx = _tracker.createInstance<Class_definitionContext>(_ctx, getState());
  enterRule(_localctx, 4, modelicaParser::RuleClass_definition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::T__3) {
      setState(183);
      match(modelicaParser::T__3);
    }
    setState(186);
    class_prefixes();
    setState(187);
    class_specifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_specifierContext ------------------------------------------------------------------

modelicaParser::Class_specifierContext::Class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Long_class_specifierContext* modelicaParser::Class_specifierContext::long_class_specifier() {
  return getRuleContext<modelicaParser::Long_class_specifierContext>(0);
}

modelicaParser::Short_class_specifierContext* modelicaParser::Class_specifierContext::short_class_specifier() {
  return getRuleContext<modelicaParser::Short_class_specifierContext>(0);
}

modelicaParser::Der_class_specifierContext* modelicaParser::Class_specifierContext::der_class_specifier() {
  return getRuleContext<modelicaParser::Der_class_specifierContext>(0);
}


size_t modelicaParser::Class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleClass_specifier;
}


antlrcpp::Any modelicaParser::Class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_specifierContext* modelicaParser::class_specifier() {
  Class_specifierContext *_localctx = _tracker.createInstance<Class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 6, modelicaParser::RuleClass_specifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(192);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(189);
      long_class_specifier();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(190);
      short_class_specifier();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(191);
      der_class_specifier();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_prefixesContext ------------------------------------------------------------------

modelicaParser::Class_prefixesContext::Class_prefixesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t modelicaParser::Class_prefixesContext::getRuleIndex() const {
  return modelicaParser::RuleClass_prefixes;
}


antlrcpp::Any modelicaParser::Class_prefixesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_prefixes(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_prefixesContext* modelicaParser::class_prefixes() {
  Class_prefixesContext *_localctx = _tracker.createInstance<Class_prefixesContext>(_ctx, getState());
  enterRule(_localctx, 8, modelicaParser::RuleClass_prefixes);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(195);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::T__4) {
      setState(194);
      match(modelicaParser::T__4);
    }
    setState(218);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      setState(197);
      match(modelicaParser::T__5);
      break;
    }

    case 2: {
      setState(198);
      match(modelicaParser::T__6);
      break;
    }

    case 3: {
      setState(200);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__7) {
        setState(199);
        match(modelicaParser::T__7);
      }
      setState(202);
      match(modelicaParser::T__8);
      break;
    }

    case 4: {
      setState(203);
      match(modelicaParser::T__9);
      break;
    }

    case 5: {
      setState(205);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__10) {
        setState(204);
        match(modelicaParser::T__10);
      }
      setState(207);
      match(modelicaParser::T__11);
      break;
    }

    case 6: {
      setState(208);
      match(modelicaParser::T__12);
      break;
    }

    case 7: {
      setState(209);
      match(modelicaParser::T__13);
      break;
    }

    case 8: {
      setState(211);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__14

      || _la == modelicaParser::T__15) {
        setState(210);
        _la = _input->LA(1);
        if (!(_la == modelicaParser::T__14

        || _la == modelicaParser::T__15)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(214);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__7) {
        setState(213);
        match(modelicaParser::T__7);
      }
      setState(216);
      match(modelicaParser::T__16);
      break;
    }

    case 9: {
      setState(217);
      match(modelicaParser::T__7);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Long_class_specifierContext ------------------------------------------------------------------

modelicaParser::Long_class_specifierContext::Long_class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> modelicaParser::Long_class_specifierContext::IDENT() {
  return getTokens(modelicaParser::IDENT);
}

tree::TerminalNode* modelicaParser::Long_class_specifierContext::IDENT(size_t i) {
  return getToken(modelicaParser::IDENT, i);
}

modelicaParser::String_commentContext* modelicaParser::Long_class_specifierContext::string_comment() {
  return getRuleContext<modelicaParser::String_commentContext>(0);
}

modelicaParser::CompositionContext* modelicaParser::Long_class_specifierContext::composition() {
  return getRuleContext<modelicaParser::CompositionContext>(0);
}

modelicaParser::Class_modificationContext* modelicaParser::Long_class_specifierContext::class_modification() {
  return getRuleContext<modelicaParser::Class_modificationContext>(0);
}


size_t modelicaParser::Long_class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleLong_class_specifier;
}


antlrcpp::Any modelicaParser::Long_class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitLong_class_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Long_class_specifierContext* modelicaParser::long_class_specifier() {
  Long_class_specifierContext *_localctx = _tracker.createInstance<Long_class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 10, modelicaParser::RuleLong_class_specifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(236);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(220);
        match(modelicaParser::IDENT);
        setState(221);
        string_comment();
        setState(222);
        composition();
        setState(223);
        match(modelicaParser::T__17);
        setState(224);
        match(modelicaParser::IDENT);
        break;
      }

      case modelicaParser::T__18: {
        enterOuterAlt(_localctx, 2);
        setState(226);
        match(modelicaParser::T__18);
        setState(227);
        match(modelicaParser::IDENT);
        setState(229);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == modelicaParser::T__21) {
          setState(228);
          class_modification();
        }
        setState(231);
        string_comment();
        setState(232);
        composition();
        setState(233);
        match(modelicaParser::T__17);
        setState(234);
        match(modelicaParser::IDENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Short_class_specifierContext ------------------------------------------------------------------

modelicaParser::Short_class_specifierContext::Short_class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::Short_class_specifierContext::IDENT() {
  return getToken(modelicaParser::IDENT, 0);
}

modelicaParser::Base_prefixContext* modelicaParser::Short_class_specifierContext::base_prefix() {
  return getRuleContext<modelicaParser::Base_prefixContext>(0);
}

modelicaParser::NameContext* modelicaParser::Short_class_specifierContext::name() {
  return getRuleContext<modelicaParser::NameContext>(0);
}

modelicaParser::CommentContext* modelicaParser::Short_class_specifierContext::comment() {
  return getRuleContext<modelicaParser::CommentContext>(0);
}

modelicaParser::Array_subscriptsContext* modelicaParser::Short_class_specifierContext::array_subscripts() {
  return getRuleContext<modelicaParser::Array_subscriptsContext>(0);
}

modelicaParser::Class_modificationContext* modelicaParser::Short_class_specifierContext::class_modification() {
  return getRuleContext<modelicaParser::Class_modificationContext>(0);
}

modelicaParser::Enum_listContext* modelicaParser::Short_class_specifierContext::enum_list() {
  return getRuleContext<modelicaParser::Enum_listContext>(0);
}


size_t modelicaParser::Short_class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleShort_class_specifier;
}


antlrcpp::Any modelicaParser::Short_class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitShort_class_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Short_class_specifierContext* modelicaParser::short_class_specifier() {
  Short_class_specifierContext *_localctx = _tracker.createInstance<Short_class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 12, modelicaParser::RuleShort_class_specifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(262);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(238);
      match(modelicaParser::IDENT);
      setState(239);
      match(modelicaParser::T__19);
      setState(240);
      base_prefix();
      setState(241);
      name();
      setState(243);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__83) {
        setState(242);
        array_subscripts();
      }
      setState(246);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::T__21) {
        setState(245);
        class_modification();
      }
      setState(248);
      comment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(250);
      match(modelicaParser::IDENT);
      setState(251);
      match(modelicaParser::T__19);
      setState(252);
      match(modelicaParser::T__20);
      setState(253);
      match(modelicaParser::T__21);
      setState(258);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case modelicaParser::T__23:
        case modelicaParser::IDENT: {
          setState(255);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == modelicaParser::IDENT) {
            setState(254);
            enum_list();
          }
          break;
        }

        case modelicaParser::T__22: {
          setState(257);
          match(modelicaParser::T__22);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(260);
      match(modelicaParser::T__23);
      setState(261);
      comment();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Der_class_specifierContext ------------------------------------------------------------------

modelicaParser::Der_class_specifierContext::Der_class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> modelicaParser::Der_class_specifierContext::IDENT() {
  return getTokens(modelicaParser::IDENT);
}

tree::TerminalNode* modelicaParser::Der_class_specifierContext::IDENT(size_t i) {
  return getToken(modelicaParser::IDENT, i);
}

modelicaParser::NameContext* modelicaParser::Der_class_specifierContext::name() {
  return getRuleContext<modelicaParser::NameContext>(0);
}

modelicaParser::CommentContext* modelicaParser::Der_class_specifierContext::comment() {
  return getRuleContext<modelicaParser::CommentContext>(0);
}


size_t modelicaParser::Der_class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleDer_class_specifier;
}


antlrcpp::Any modelicaParser::Der_class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitDer_class_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Der_class_specifierContext* modelicaParser::der_class_specifier() {
  Der_class_specifierContext *_localctx = _tracker.createInstance<Der_class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 14, modelicaParser::RuleDer_class_specifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(264);
    match(modelicaParser::IDENT);
    setState(265);
    match(modelicaParser::T__19);
    setState(266);
    match(modelicaParser::T__24);
    setState(267);
    match(modelicaParser::T__21);
    setState(268);
    name();
    setState(269);
    match(modelicaParser::T__25);
    setState(270);
    match(modelicaParser::IDENT);
    setState(275);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == modelicaParser::T__25) {
      setState(271);
      match(modelicaParser::T__25);
      setState(272);
      match(modelicaParser::IDENT);
      setState(277);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(278);
    match(modelicaParser::T__23);
    setState(279);
    comment();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Base_prefixContext ------------------------------------------------------------------

modelicaParser::Base_prefixContext::Base_prefixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Type_prefixContext* modelicaParser::Base_prefixContext::type_prefix() {
  return getRuleContext<modelicaParser::Type_prefixContext>(0);
}


size_t modelicaParser::Base_prefixContext::getRuleIndex() const {
  return modelicaParser::RuleBase_prefix;
}


antlrcpp::Any modelicaParser::Base_prefixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitBase_prefix(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Base_prefixContext* modelicaParser::base_prefix() {
  Base_prefixContext *_localctx = _tracker.createInstance<Base_prefixContext>(_ctx, getState());
  enterRule(_localctx, 16, modelicaParser::RuleBase_prefix);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(281);
    type_prefix();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
